--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Dependencies
 node_modules/
-*/node_modules/
+backend/node_modules/
+frontend/node_modules/
 
 # Production builds
 build/
@@ -12,6 +13,7 @@ dist/
 .env.development.local
 .env.test.local
 .env.production.local
+backend/.env
 
 # Logs
 npm-debug.log*
@@ -118,4 +120,59 @@ Thumbs.db
 
 # Data files
 backend/data/
-*.json 
+*.json
+
+# Mac OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Windows
+Desktop.ini
+$RECYCLE.BIN/
+
+# Linux
+*~
+
+# Editor directories and files
+.idea
+.vscode/*
+!.vscode/extensions.json
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# Local data storage (development only)
+backend/data/bookings.json
+backend/data/storage/
+
+# Cache
+.cache/
+.parcel-cache/
+
+# Temporary files
+tmp/
+temp/
+.tmp/
+
+# Railway specific
+.railway/
+
+# Testing
+test-results/
+playwright-report/
+playwright/.cache/ 
