🔧 修復循環依賴問題
- 移除導致循環依賴的postinstall腳本
- 簡化package.json配置
- 移除heroku-postbuild避免構建衝突
- 讓Railway使用標準Node.js構建流程

--- a/package.json
+++ b/package.json
@@ -5,14 +5,11 @@
   "main": "backend/server.js",
   "scripts": {
     "start": "cd backend && npm start",
-    "build": "npm run install-deps && npm run build-frontend",
-    "install-deps": "npm install && cd backend && npm install && cd ../frontend && npm install",
-    "build-frontend": "cd frontend && npm run build",
+    "build": "cd frontend && npm run build",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "server": "cd backend && npm run dev",
     "client": "cd frontend && npm start",
-    "postinstall": "npm run install-deps",
-    "heroku-postbuild": "npm run build-frontend"
+    "install-all": "cd backend && npm install && cd ../frontend && npm install"
   },
   "keywords": ["ai", "booking", "venue", "reservation", "railway"],
   "author": "AI Booking System",
