critical: 修復storage.js缺失導致服務器啟動失敗
- 修復.gitignore過度忽略backend/data/目錄的問題
- 添加關鍵的storage.js模塊文件到Git
- 保留對數據文件的忽略但允許代碼文件
- 解決'Cannot find module ../data/storage'錯誤

--- a/.gitignore
+++ b/.gitignore
@@ -118,10 +118,10 @@ temp/
 ehthumbs.db
 Thumbs.db
 
-# Data files
-backend/data/
+# Data files (但保留代碼文件)
 backend/data/bookings.json
-backend/data/storage/*.json
+backend/data/storage/
+!backend/data/storage.js
 
 # Mac OS
 .DS_Store
