--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "axios": "^1.5.0",
+    "moment-timezone": "^0.5.40",
     "moment": "^2.29.4",
     "uuid": "^9.0.0"
   },
