--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "5.0.1",
     "axios": "^1.5.0",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.40",
     "lucide-react": "^0.263.1",
     "web-vitals": "^2.1.4"
   },
