重新設計時間表系統邏輯 - 修復日期過濾問題
✨ 新功能:
- 重新設計時間表系統邏輯，根據預訂發生日期而非創建日期過濾
- 添加清晰的用戶界面說明和使用指南
- 改進前端數據獲取和顯示邏輯

🔧 技術改進:
- 後端: 統一預訂文件路徑，修正admin.js讀取路徑
- 後端: 添加moment-timezone依賴，改進時區處理
- 前端: 升級到moment-timezone，統一API配置
- 前端: 分離場地和預訂數據獲取邏輯

🐛 問題修復:
- 修復用戶選擇日期時顯示錯誤預訂的問題
- 修復時區不一致導致的日期計算錯誤
- 修復前後端數據源不一致的問題

📝 文檔:
- 添加SCHEDULE_SYSTEM_REDESIGN.md詳細說明
- 包含完整的測試驗證和使用指南

🧪 測試:
- 所有測試用例通過(4/4)
- 驗證了正確的日期過濾邏輯

--- a/backend/package.json
+++ b/backend/package.json
@@ -10,12 +10,12 @@
     "health": "curl -f http://localhost:${PORT:-5000}/health || exit 1"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "axios": "^1.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "axios": "^1.5.0",
-    "moment-timezone": "^0.5.40",
+    "express": "^4.18.2",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.48",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
@@ -25,7 +25,12 @@
     "node": ">=18.0.0",
     "npm": ">=8.0.0"
   },
-  "keywords": ["ai", "booking", "api", "railway"],
+  "keywords": [
+    "ai",
+    "booking",
+    "api",
+    "railway"
+  ],
   "author": "AI Booking System",
   "license": "MIT"
-} 
+}
