--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,14 +7,14 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.5.0",
+    "lucide-react": "^0.263.1",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.48",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "axios": "^1.5.0",
-    "moment": "^2.29.4",
-    "moment-timezone": "^0.5.40",
-    "lucide-react": "^0.263.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -42,8 +42,8 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.0",
     "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.24"
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.0"
   }
-} 
+}
