--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "axios": "^1.10.0",
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "moment-timezone": "^0.6.0"
   }
 }
