--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -3,15 +3,18 @@ nixPkgs = ['nodejs-18_x', 'npm']
 
 [phases.install]
 cmds = [
-  'cd backend && npm install',
-  'cd ../frontend && npm install'
+  'echo "Installing backend dependencies..." && cd backend && npm install --production=false --no-audit',
+  'echo "Installing frontend dependencies..." && cd ../frontend && npm install --production=false --no-audit'
 ]
 
 [phases.build]
-cmds = ['cd frontend && npm run build']
+cmds = [
+  'echo "Building frontend..." && cd frontend && npm run build',
+  'echo "Build completed successfully"'
+]
 
 [start]
-cmd = 'cd backend && npm start'
+cmd = 'echo "Starting backend server..." && cd backend && npm start'
 
 [variables]
 NODE_ENV = 'production' 
