修復 Railway 構建問題
- 修復 nixpacks.toml 中的 npm 變量錯誤
- 簡化構建配置，使用 --prefix 參數
- 移除複雜的 echo 命令，避免構建失敗
- 確保所有依賴項正確安裝
- 本地測試確認前後端構建和運行正常

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,20 +1,17 @@
 [phases.setup]
-nixPkgs = ['nodejs-18_x', 'npm']
+nixPkgs = ['nodejs-18_x']
 
 [phases.install]
 cmds = [
-  'echo "Installing backend dependencies..." && cd backend && npm install --production=false --no-audit',
-  'echo "Installing frontend dependencies..." && cd ../frontend && npm install --production=false --no-audit'
+  'npm install --prefix backend',
+  'npm install --prefix frontend'
 ]
 
 [phases.build]
-cmds = [
-  'echo "Building frontend..." && cd frontend && npm run build',
-  'echo "Build completed successfully"'
-]
+cmds = ['npm run build --prefix frontend']
 
 [start]
-cmd = 'echo "Starting backend server..." && cd backend && npm start'
+cmd = 'npm start --prefix backend'
 
 [variables]
 NODE_ENV = 'production' 
